--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,3 +15,8 @@ workflows:
     build-and-test:
       jobs:
         - build-and-test
+deployment:
+  staging:
+    branch: master
+    heroku:
+      appname: hacker-news-sapient
